2007-05-03	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Handle .data.* sections

2007-04-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove qrtems_debug.

2007-03-12	Joel Sherrill <joel@OARcorp.com>

	* clock/clock.c, console/console.c, include/bsp.h, include/coverhd.h,
	include/tm27.h, network/network.c, start/start.S, startup/bspclean.c,
	startup/bspstart.c, startup/init5282.c, startup/linkcmds,
	timer/timer.c: Correct license URL and/or fix mistake in copyright
	notice. Both of these mistakes appear to be from code submitted after
	these changes were made previously.

2007-03-11	Joel Sherrill <joel@OARcorp.com>

	* startup/bspstart.c: Remove assignments of
	Cpu_table.do_zero_of_workspace to TRUE since TRUE is the default
	value in boot_card.c

2007-03-10	Joel Sherrill <joel@OARcorp.com>

	PR 1227/bsps
	* include/bsp.h: Remove MAX_LONG_TEST_DURATION and
	MAX_SHORT_TEST_DURATION. They are obsolete and unused.

2006-12-14	Till Straumann <strauman@slac.stanford.edu>

	* startup/bspstart.c: Changed BSP_installVME_isr() so that
	the special handling of a 'FPGA interrupt' [this FPGA is *not*
	present on the uC5282 module but is externally connected to
	IRQ1 on Eric Norum's particular 'motherboard'] is only
	activated when connecting to the special vectors > 192.
	The change allows us ordinary users [:-)] to use IRQ1
	normally, simply by connecting an ISR to vector 64+1...
	Also, BSP_enable_irq_at_pic(), BSP_disable_irq_at_pic(),
	BSP_irq_is_enabled_at_pic() were introduced (compat. with
	some PPC BSPs).

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-11-15	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Merge c_rtems_main() into boot_card(). This eliminated a
	file and simplified initialization.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove superfluous -DASM.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>
