@@ -1,3 +1,7 @@
+2007-10-14	Eric Norum <norume@aps.anl.gov>
+
+	* clock/clock.c: Add nanoseconds since tick support.
+
 2007-05-03	Joel Sherrill <joel@OARcorp.com>
 
 	* startup/linkcmds: Handle .data.* sections
